# bespokeprompusher

./: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
bespokeprompusher/: creds.py  main.py
bespokeprompusher/pollers/: _snmp.py  aquapoll.py  deco.py  dpdupoll.py  fronius.py  nbpoll.py  nut.py  updateip.py
config/: bespokeprompusher.yaml  example.yaml
tests/: snmp_helpers.py  test_aquapoll.py  test_creds.py  test_deco.py  test_dpdupoll.py  test_fronius.py  test_main.py  test_nbpoll.py  test_nut.py  test_snmp.py  test_updateip.py
