[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bespokeprompusher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pyyaml",
    "pyserial",
    "tplinkrouterc6u",
]

[tool.setuptools.packages.find]
include = ["bespokeprompusher*"]
