[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bespokeprompusher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pyyaml",
    "pyserial",
    "tplinkrouterc6u",
]

[tool.setuptools.packages.find]
include = ["bespokeprompusher*"]

[tool.black]
target-version = ["py312"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "broad-exception-caught",
]

[tool.pylint.format]
max-line-length = 88
